repository/package/skin/src/main/webapp/screen.css
/* ... */
.hippo-browser-documents-small .hippo-browser-documents-workflow select option{color: #666666; background: white; padding: 1px;}

/* Tree Plugin */

/* overriding standard wicket tree styling */
/*
.hippo-tree {overflow: scroll; -ms-overflow-y: auto; overflow-y: auto; -ms-overflow-x: hidden; overflow-x: hidden; width: 200px;  z-index: 1;}
*/

/* remove margins */
.hippo-tree div.wicket-tree{margin: 0px; border: none;width: auto;}
/* make sure the first folder level in the tree doens't have a left padding */
.hippo-tree div.wicket-tree div.a_{padding-left: 0px}
.hippo-tree div.wicket-tree div.a_ div.a_{padding-left: 1em}
/* make the rows expand so it will activate the scrolling of the .hippotree div */
.hippo-tree div.wicket-tree,
.hippo-tree div.wicket-tree div.row, 
.hippo-tree div.wicket-tree div.row-selected{overflow: visible; white-space: nowrap}

.hippo-console-tree .hippo-tree div.wicket-tree {width: auto;}

/* set row height to a little higher for better clickability */
.hippo-tree div.wicket-tree div.row, 
.hippo-tree div.wicket-tree div.row-selected{padding-top: 2px; padding-bottom: 2px;}

.hippo-tree div.wicket-tree div.row .hippo-tree-dropdown {visibility: hidden}
.hippo-tree div.wicket-tree div.row .hippo-tree-dropdown-icon-container {background: transparent;}
.hippo-tree div.wicket-tree div.row:hover .hippo-tree-dropdown-icon-container, 
.hippo-tree div.wicket-tree div.row-selected:hover .hippo-tree-dropdown-icon-container {
  background-image: url("images/controls/folder-workflow-icon.png"); 
  background-repeat: no-repeat;
  background-position: -1px -2px;
}
  
.hippo-tree div.wicket-tree div.row-selected {background-image: url("images/controls/folder-background-selected.png"); } /*background-position: 0px -20px;}*/

.hippo-tree div.wicket-tree div.row a,
.hippo-tree div.wicket-tree div.row-selected a {font-weight: normal; color: black;}

/* IE6 workaround */
.hippo-tree div.wicket-tree div.context-hover .hippo-tree-dropdown-icon-container {
  background-image: url("images/controls/folder-workflow-icon.png"); 
  background-repeat: no-repeat;
  background-position: -1px -2px;
}

.hippo-tree div.wicket-tree div.context-hover-selected .hippo-tree-dropdown-icon-container {
  background-image: url("images/controls/folder-workflow-icon.png"); 
  background-repeat: no-repeat;
  background-position: -1px -2px;
  
}

.hippo-tree .wicket-tree span.plus, 
.hippo-tree .wicket-tree span.minus {background-image: url("images/tree-icons.png"); width: 14px;}

.hippo-tree .wicket-tree span.junction, 
.hippo-tree .wicket-tree span.junction-last, 
.hippo-tree .wicket-tree span.corner, 
.hippo-tree .wicket-tree span.indent-line,
.hippo-tree .wicket-tree span.indent-blank {background-image: none; width: 14px;} 

.hippo-tree .icon-16{padding: 0px; width: 16px; height: 16px; display: block; float: left; margin-right: 5px; margin-left: 3px;}

/* mimetypes icons */
table tr.selected span.document-16, .document-16{background-image:url("images/icons/document-16.png")}
table tr.selected span.folder-16, .folder-16{background-image:url("images/icons/folder-16.png")}
table tr.selected span.folder-open-16, .folder-open-16{background-image:url("images/icons/folder-open-16.png")}

/* mimetypes icons for virtual trees */
table tr.selected span.document-virtual-16, .document-virtual-16{background-image:url("images/icons/document-16.png")}
table tr.selected span.folder-virtual-16, .folder-virtual-16{background-image:url("images/icons/folder-virtual-16.gif")}
table tr.selected span.folder-virtual-open-16, .folder-virtual-open-16{background-image:url("images/icons/folder-virtual-open-16.gif")}

/* Accordion */
.hippo-accordion-unit{background: #f4f4f4;}
/* change the tree if he's inside an accordion */
.hippo-accordion-unit .hippo-tree .wicket-tree{/*min-height: 100px;*/ margin-bottom: 0px; padding-left: 0px; padding-top: 0px; }

.hippo-accordion-unit h2{background-image: url("images/accordion-unit-back2.png"); background-repeat: repeat-x}

.hippo-accordion-unit h2 a{
background-image: url("images/accordion-unit-back.png"); 
background-repeat: no-repeat; 
color: #666666; 
display: block; 
height: 14px;
width: 100%;
padding: 5px;
padding-left: 0px; 
padding-right: 0px;
border-bottom: 1px solid #afafaf; 
font-weight: bold;
}
.hippo-accordion-unit h2 a span{padding-left: 20px;}

.hippo-accordion-unit h2 a{background-position: 0px 0px}
.hippo-accordion-unit h2 a:hover{background-position: 0px -96px}
.hippo-accordion-unit h2 a:active{background-position: 0px -120px}

.hippo-accordion-unit h2 a.focus{background-position: 0px -24px}
.hippo-accordion-unit h2 a.focus:hover{background-position: 0px -48px}
.hippo-accordion-unit h2 a.focus:active{background-position: 0px -72px}

/* Show add-root button in tree*/
.hippo-accordion-unit-add { 
	display: block; 
	background-image: url("images/list-add-16.png"); 
	background-repeat: no-repeat; 
	background-position: 0px 6px; 
	text-align: left; 
	padding-left: 21px; 
	padding-top: 6px; 
	margin-left: 5px;
	height: 20px;
	color: #333; 
}

/* But hide it in pickers */
.wicket-modal .hippo-accordion-unit-add { display: none; }

/* Hide the context-menu-left-click-icon as well */
.wicket-modal .hippo-tree-dropdown-icon-container {display: none;}

/* Hippo tree addition */

.hippo-tree-dropdown-icon-container {
  display: none;
  position: absolute;
  left: -100px;
  top: -100px;
}

.container-selected {
	display: block;
  background-color:#F4F4F4;
  width:20px;
  height:20px;
}

.hippo-tree-dropdown-icon {display: block; width: 18px; height: 18px; }

/* Document Preview Plugin */
/* ================================================ */
.hippo-preview-document-wrapper {}
.hippo-preview-document{background: white url("images/hippo-shade.png"); border-bottom: 1px solid #afafaf; padding-top: 4px; padding-bottom: 20px; padding-left: 4px; padding-right: 20px; }
.hippo-preview-document ol {list-style-type: decimal; list-style-position: inside}
/* ... */

